RESOLVED FIXED190436
IDBTransaction does not use "RefPtr<IDBTransaction> self"
https://bugs.webkit.org/show_bug.cgi?id=190436
Summary IDBTransaction does not use "RefPtr<IDBTransaction> self"
Yusuke Suzuki
Reported 2018-10-10 12:12:31 PDT
IDBTransaction does not use "RefPtr<IDBTransaction> self"
Attachments
Patch (1.68 KB, patch)
2018-10-10 12:13 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2018-10-10 12:13:34 PDT
Yusuke Suzuki
Comment 2 2018-11-11 23:57:53 PST
Ping?
WebKit Commit Bot
Comment 3 2018-11-12 06:55:12 PST
Comment on attachment 351979 [details] Patch Clearing flags on attachment: 351979 Committed r238085: <https://trac.webkit.org/changeset/238085>
WebKit Commit Bot
Comment 4 2018-11-12 06:55:13 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-11-12 06:56:26 PST
Note You need to log in before you can comment on or make changes to this bug.