IDBTransaction does not use "RefPtr<IDBTransaction> self" https://bugs.webkit.org/show_bug.cgi?id=190436

Reviewed by Alex Christensen.

It seems that `RefPtr<IDBTransaction> self;` is not effective since it does not capture anything.
Use `protectedThis = makeRef(*this)` instead.

No behavior change.

* Modules/indexeddb/IDBTransaction.cpp:
(WebCore::IDBTransaction::IDBTransaction):


Canonical link: https://commits.webkit.org/206299@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238085 268f45cc-cd09-0410-ab3c-d52691b4dbfc